--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@
 /* ------------------------------------------Colours */
 
 .bg-color-name-title {
-    background-color: #676767;
+    background-color: #223147;
 }
 
 .bg-color-three-reasons {
-    background-color: #fff;
+    background-color: rgb(31, 46, 73);
 
 }
 
@@ -28,7 +28,7 @@
 }
 
 .ui-menu-color-download {
-    background-color: #525252;
+    background-color: #56c548;
 }
 
 /* ------------------------------------------Special padding/margins/texts */
@@ -90,7 +90,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 360px;
+    min-height: 240px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
@@ -99,8 +99,8 @@ header {
 .name {
     font-family: "Exo", sans-serif;
     font-weight: 100;
-    font-size: 46px;
-    margin-top: 50px;
+    font-size: 26px;
+    margin-top: 25px;
     color: #fff;
 }
 
