Add style to footer section of the homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,7 @@ header {
 
 /* ------------------------------------------Footer */
 
-/* footer {
+footer {
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
@@ -219,5 +219,5 @@ header {
 
 #footer-details {
     padding: 20px;
-} */
+}
 
