--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,14 +150,15 @@ header {
     color: #fff;
 }
 
-.title {
+/* Removed because no longer required since homepage format has changed */
+/* .title {
     font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
-}
+} */
 
 .list-inline-item:not(:last-child) {
     margin: 0;
