Add end game section where users can create username and register their scores in storage to be reported in ranking table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,12 @@ header {
     height: 120px;
 }
 
+/* ------------------------------------------Leaderboard */
+
+#leaderboard-details {
+    padding: 20px;
+}
+
 /* ------------------------------------------Footer */
 
 footer {
