Create start quiz button to start pop quiz in modal window

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,3 +286,9 @@ footer {
 .three-reasons-heading {
     margin-bottom: 15px;
 }
+
+/* ------------------------------------------Quiz button */
+
+.quiz-button {
+    margin: 25px;
+}
