Beautify code in index to organise content for ease of access to code in the future

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
     background-color: #223147;
 }
 
+.bg-modal-pop-quiz {
+    background-color: #223147;
+}
+
 .bg-color-three-reasons {
     background-color: rgb(31, 46, 73);
 
