--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
     background-color: #223147;
 }
 
+.modal-title-color {
+    color: #fff;
+}
+
 .bg-color-three-reasons {
     background-color: rgb(31, 46, 73);
 
