--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,7 @@ footer {
     color: #fff;
 } */
 
-/* .choice-container {
+.choice-container {
     display: flex;
     margin-bottom: 0.8rem;
     width: 100%;
@@ -333,14 +333,14 @@ footer {
     background: rgb(18, 93, 255);
     font-size: 3rem;
     min-width: 80rem;
-}
+} 
 
 .choice-container:hover {
     cursor: pointer;
     box-shadow: 0 0.4rem 1.4rem 0 rgba(6, 103, 247, 0.5);
     transform: scale(1.02);
     transform: transform 100ms;
-} */
+} 
 
 /* .choice-prefix {
     padding: 2rem 2.5rem;
