Create functionality to allow form to pop up right after quiz is over to allow player to register score and upload in leaderboard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,8 +303,10 @@ footer {
 
 /* ------------------------------------------Quiz features */
 
+
+/* Hack for fullscreen modal added from stackoverflow */
 .modal {
-    padding: 0 !important; // override inline padding-right added from js
+    padding: 0 !important; 
   }
   .modal .modal-dialog {
     width: 100%;
@@ -325,12 +327,12 @@ footer {
     color: #fff;
 } */
 
-.choice-container {
+/* .choice-container {
     display: flex;
     margin-bottom: 0.8rem;
     width: 100%;
     border-radius: 4px;
-    background: rgb(18, 93, 255);
+    background: rgba(11, 190, 122, 0.2);
     font-size: 3rem;
     min-width: 80rem;
 } 
@@ -340,7 +342,7 @@ footer {
     box-shadow: 0 0.4rem 1.4rem 0 rgba(6, 103, 247, 0.5);
     transform: scale(1.02);
     transform: transform 100ms;
-} 
+}  */
 
 /* .choice-prefix {
     padding: 2rem 2.5rem;
